# gyukaro-SVS

./: .gitignore  AGENTS.md  README.md  pyproject.toml  render.sh  serve.sh
checkpoints/: acoustic_refiner_gyu.pt  acoustic_refiner_singing.pt  acoustic_refiner_singing_v2.pt  acoustic_refiner_spectral_gyu.pt  acoustic_refiner_spectral_singing.pt  acoustic_refiner_spectral_universal.pt  acoustic_refiner_universal.pt  acoustic_refiner_universal_v2.pt  gyu_real_latent_adapters_v0.7.pt
configs/: diffsinger_gtsinger_ja.yaml  diffsinger_gtsinger_ja_diffusion.yaml  diffsinger_gtsinger_ja_gyu_acoustic_projection.yaml  diffsinger_gtsinger_ja_gyu_mixln.yaml  diffsinger_gtsinger_ja_rapid_curriculum.yaml  diffsinger_gyu_all_adapt.yaml  diffsinger_gyu_all_segmented_finetune.yaml  diffsinger_gyu_all_segmented_prior.yaml  diffsinger_gyu_coarticulated.yaml  diffsinger_gyu_lexical.yaml  diffsinger_gyu_phrase_chunks.yaml  diffsinger_gyu_segmented_finetune.yaml  diffsinger_gyu_segmented_prior.yaml  diffsinger_ko_acoustic_prior_finetune.yaml  diffsinger_ko_phoneme_prior.yaml  diffsinger_ko_prior_finetune.yaml  diffsinger_pjs_compact.yaml  diffsinger_pjs_compact_long.yaml  diffsinger_pjs_compact_stress.yaml  diffsinger_pjs_consonant.yaml  diffsinger_pjs_lexical.yaml  diffsinger_pjs_rapid.yaml  diffsinger_pjs_source.yaml  diffsinger_score_native.yaml  diffsinger_teacher_coarticulated.yaml  diffsinger_vocalset_lexical.yaml  diffsinger_zeroth3h5_finetune.yaml  diffsinger_zeroth3h5_prior.yaml  diffsinger_zeroth3h5_text_finetune.yaml  diffsinger_zeroth3h5_text_prior.yaml  diffsinger_zeroth_finetune.yaml  diffsinger_zeroth_gyu_adapt.yaml  diffsinger_zeroth_prior.yaml  diffsinger_zeroth_text_finetune.yaml  diffsinger_zeroth_text_prior.yaml  gtsinger_gyu_identity_candidates.json  gtsinger_ko_qualified_protocol.json  (+9 more)
(+1479 files in other folders)
