[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gyu-singer"
version = "0.1.0"
description = "GYU experimental score-controlled singing renderer"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "scipy>=1.10", "soundfile>=0.12", "torch", "torchaudio", "torchcodec", "transformers", "onnxruntime"]

[project.scripts]
gyu-singer = "gyu_singer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
